syntax = "proto3";

package email;

service EmailService {
  rpc AddEmail(AddEmailRequest) returns (AddEmailResponse);
}

message AddEmailRequest {
  string email = 1;
}

message AddEmailResponse {
  string message = 1;
  bool success = 2;
}
